# TCM-Hermes

./: .gitignore  README.md  pyproject.toml
data/lineage/: lineage_guizhi_tang.json  lineage_xiao_chaihu_tang.json
data/reports/: autonomous_review_report_2026-06-12.md  autonomous_review_report_latest.md
data/research/: corpus_statistics.json  disease_term_mapping.json  freq_disease.csv  freq_formula.csv  freq_herbs.csv  freq_pulse.csv  freq_symptoms.csv  herb_network.dot  herb_network.json  symptom_formula.json  topic_胸痹.json
data/rules_rejected/: BOOK_SHL_SONGBEN.jsonl
data/skills/: disease_skill_index.json  hermes.disease.00945403.json  hermes.disease.00945403.md  hermes.disease.00981661.json  hermes.disease.00981661.md  hermes.disease.01156155.json  hermes.disease.01156155.md  hermes.disease.01397124.json  hermes.disease.01397124.md  hermes.disease.02043794.json  hermes.disease.02043794.md  hermes.disease.02137709.json  (+1006 more)
docs/: ARCHITECTURE.md  DISEASE_HERMES.md  HERMES_V5_PROTOCOL.md  INTEGRATIONS.md  LLM_BACKENDS.md  SAFETY.md
examples/: litellm_multi_model.py
hermes/: __init__.py  cli.py  config.py  protocol.py  utils.py  version.py
prompts/: adversarial_critic.txt  consensus_judge.txt  rule_extractor.txt  rule_repair.txt  rule_reviewer.txt
scripts/: mcp_client_demo.py  run_full_pipeline.sh
tests/: conftest.py  test_corpus.py  test_disease.py  test_disease_corpus.py  test_disease_skills.py  test_integrations.py  test_llm_backends.py  test_mcp_e2e.py  test_metrics_memory.py  test_pipeline.py  test_protocol.py  test_rag_and_skills.py  test_release_gate.py  test_safety_and_workbench.py  test_viz.py
(+174 files in other folders)
